Update and rename test.yml to .github/workflows/test.yml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,9 @@
-name: Validate & Lint Migration
+name: test
 
 on:
   push:
     branches:
-      - test
+      - master
   workflow_dispatch:
 
 jobs:
