--- a/.github/workflows/gitub.yml
+++ b/.github/workflows/gitub.yml
@@ -16,3 +16,8 @@ jobs:
 
       - name: Print
         run: env | sort
+      - name: Dump github context
+        run:   echo "$GITHUB_CONTEXT"
+        shell: bash
+        env:
+         GITHUB_CONTEXT: ${{ toJson(github) }}
