--- a/.github/workflows/environmentcreation.yml
+++ b/.github/workflows/environmentcreation.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: get user-id
+        run: curl -s https://api.github.com/users/Sakthi770 | jq '.id'
       - name: Check environment creation
         run: |
           curl -L \
@@ -18,4 +20,4 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/Sakthi770/example-tomcat-war/environments/workflowenv \
-            -d '{"wait_timer":30,"prevent_self_review":false,"reviewers":[{"type":"User","id":"Sakthi770"}],"deployment_branch_policy":{"protected_branches":false,"custom_branch_policies":true}}'
+            -d '{"wait_timer":30,"prevent_self_review":false,"reviewers":[{"type":"User","id":Sakthi770}],"deployment_branch_policy":{"protected_branches":false,"custom_branch_policies":true}}'
