--- a/.github/workflows/environmentcreation.yml
+++ b/.github/workflows/environmentcreation.yml
@@ -14,6 +14,7 @@ jobs:
         run: curl -s https://api.github.com/users/Sakthi770 | jq '.id'
       - name: Check environment creation
         run: |
+         # Creating environment
           curl -L \
             -X PUT \
             -H "Accept: application/vnd.github+json" \
@@ -21,3 +22,11 @@ jobs:
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/Sakthi770/example-tomcat-war/environments/workflowenv \
             -d '{"wait_timer":30,"prevent_self_review":false,"reviewers":[{"type":"User","id":105368111}],"deployment_branch_policy":{"protected_branches":false,"custom_branch_policies":true}}'
+          # Creating deployment branch policy
+          curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/Sakthi770/example-tomcat-war/environments/workflowenv/deployment-branch-policies \
+            -d '{"name":"main","type":"branch"}'
