--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -43,6 +43,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.x'
+      - name: Install dependencies
+        run: |
+          pip install pynacl
   
       - name: Run Python script
         run: |
