--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -52,14 +52,16 @@ jobs:
           python -c "
           from base64 import b64encode
           from nacl import encoding, public
-  
+          
           def encrypt(public_key: str, secret_value: str) -> str:
-            public_key = public.PublicKey(public_key.encode('utf-8'), encoding.Base64Encoder())
+            """Encrypt a Unicode string using the public key."""
+            public_key = public.PublicKey(public_key.encode("utf-8"), encoding.Base64Encoder())
             sealed_box = public.SealedBox(public_key)
-            encrypted = sealed_box.encrypt(secret_value.encode('utf-8'))
-            return b64encode(encrypted).decode('utf-8')
-            
-          encrypted_secret = encrypt('$PUBLIC_KEY', 'ENV_SECRET')
+            encrypted = sealed_box.encrypt(secret_value.encode("utf-8"))
+            return b64encode(encrypted).decode("utf-8")
+          
+          encrypt("$PUBLIC_KEY", "MYSECRET")
+          encrypted_secret = encrypt("$PUBLIC_KEY", "ENV_SECRET")
           print(f'encrypted_secret::{encrypted_secret}')
           with open('$GITHUB_OUTPUT', 'a') as f:
             f.write(f'encrypted_secret={encrypted_secret}\n')
