--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -49,7 +49,7 @@ jobs:
   
       - name: Run Python script
         run: |
-          python -c "
+          echo "ENCRYPTED_SECRET=$(python - <<EOF
           from base64 import b64encode
           from nacl import encoding, public
           
@@ -59,15 +59,11 @@ jobs:
             sealed_box = public.SealedBox(public_key)
             encrypted = sealed_box.encrypt(secret_value.encode("utf-8"))
             return b64encode(encrypted).decode("utf-8")
-          
-          encrypt("$PUBLIC_KEY", "MYSECRET")
-          encrypted_secret = encrypt("$PUBLIC_KEY", "ENV_SECRET")
-          print(f'encrypted_secret::{encrypted_secret}')
-          with open('$GITHUB_OUTPUT', 'a') as f:
-            f.write(f'encrypted_secret={encrypted_secret}\n')
-          "
+            
+          print (encrypt("$PUBLIC_KEY", "MYSECRET"))
+          EOF
+          )" >> GITHUB_ENV
 
       - name: Use encrypted secret in next step
         run: |
-          encrypted_secret=$(cat $GITHUB_OUTPUT | grep 'encrypted_secret' | cut -d '=' -f 2)
-          echo "Encrypted secret is $encrypted_secret"
+          echo "Encrypted secret is $ENCRYPTED_SECRET"
