--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -59,10 +59,9 @@ jobs:
             sealed_box = public.SealedBox(public_key)
             encrypted = sealed_box.encrypt(secret_value.encode("utf-8"))
             return b64encode(encrypted).decode("utf-8")
-            
-          print (encrypt("$PUBLIC_KEY", "MYSECRET"))
-          EOF
-          )" >> GITHUB_ENV
+
+          encrypt("$PUBLIC_KEY", "MYSECRET")
+          print(encrypt("$PUBLIC_KEY", "MYSECRET")) EOF )" >> GITHUB_ENV
 
       - name: Use encrypted secret in next step
         run: |
