--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -35,7 +35,7 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer <YOUR-TOKEN>" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/Sakthi770/example-tomcat-war/environments/workflowenv/secrets/public-key | jq -r '.key' | base64 --decode)
+            https://api.github.com/repos/Sakthi770/example-tomcat-war/environments/workflowenv/secrets/public-key | jq -r '.key')
           echo "::add-mask::$PUBLIC_KEY"
           echo "PUBLIC_KEY=$PUBLIC_KEY" >> $GITHUB_ENV
           
