--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -33,12 +33,12 @@ jobs:
           echo "Adding environmental secrets and varaibles"
           PUBLIC_KEY=$(curl -L \
             -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer <YOUR-TOKEN>" \
+            -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/Sakthi770/example-tomcat-war/environments/workflowenv/secrets/public-key | jq -r '.key')
           echo "::add-mask::$PUBLIC_KEY"
           echo "PUBLIC_KEY=$PUBLIC_KEY" >> $GITHUB_ENV
-          
+
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
