--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -49,22 +49,20 @@ jobs:
   
       - name: Run Python script
         run: |
-           python - <<EOF
+           echo "ENCRYPTED_SECRET=$(python - <<EOF
            from base64 import b64encode
            from nacl import encoding, public
-  
+           
            def encrypt(public_key: str, secret_value: str) -> str:
-               public_key = public.PublicKey(public_key.encode("utf-8"), encoding.Base64Encoder())
+               """Encrypt a Unicode string using the public key."""
+               public_key = public.PublicKey(public_key.encode('utf-8'), encoding.Base64Encoder())
                sealed_box = public.SealedBox(public_key)
-               encrypted = sealed_box.encrypt(secret_value.encode("utf-8"))
-               return b64encode(encrypted).decode("utf-8")
-  
-           encrypted_secret = encrypt("${{ env.PUBLIC_KEY }}", "MYSECRET")
-           print(f"ENCRYPTED_SECRET={encrypted_secret}")
-           with open(os.environ['GITHUB_ENV'], 'a') as f:
-               f.write(f"ENCRYPTED_SECRET={encrypted_secret}\n")
+               encrypted = sealed_box.encrypt(secret_value.encode('utf-8'))
+               return b64encode(encrypted).decode('utf-8')
+           
+           print(encrypt('$PUBLIC_KEY', 'MYSECRET'))
            EOF
-
+           )" >> $GITHUB_ENV
       - name: Use encrypted secret in next step
         run: |
           echo "Encrypted secret is $ENCRYPTED_SECRET"
