--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -74,7 +74,7 @@ jobs:
           -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/Sakthi770/example-tomcat-war/environments/workflowenv/secrets/MYSECRET \
-          -d '{"encrypted_value":"$ENCRYPTED_SECRET","key_id":"$KEY_ID"}'
+          -d '{"encrypted_value":"${{ env.ENCRYPTED_SECRET }}","key_id":"$KEY_ID"}'
 
       - name: create a environment variable
         run: |
