--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -20,6 +20,20 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: rpeo list
         run : echo "Relo list:${{steps.get-repos.outputs.repos}}"
+
+      - name: List Repositories using octokit
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const octokit = github.getOctokit(core.getInput('token'));
+            const { data: repos } = await octokit.rest.repos.listForOrg({
+              org: 'Sakthi770',
+              type: 'all',
+              per_page: 100
+            });
+            console.log(repos.map(repo => repo.name).join('\n'));
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
    #    - name: Check environment creation
    #      run: |
