--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -22,19 +22,13 @@ jobs:
         run : echo "Relo list:${{steps.get-repos.outputs.repos}}"
 
       - name: List Repositories using octokit
-        uses: actions/github-script@v6
-        with:
-          script: |
-            const octokit = github.getOctokit(core.getInput('token'));
-            const { data: repos } = await octokit.rest.repos.listForOrg({
-              org: 'Sakthi770',
-              type: 'all',
-              per_page: 100
-            });
-            console.log(repos.map(repo => repo.name).join('\n'));
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        
+        run: |
+         curl -L \
+         -H "Accept: application/vnd.github+json" \
+         -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+         -H "X-GitHub-Api-Version: 2022-11-28" \
+         https://api.github.com/users/Sakthi770/repos
+
    #    - name: Check environment creation
    #      run: |
    #        echo "Creating environment"
