--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -23,11 +23,12 @@ jobs:
 
       - name: List Repositories using octokit
         run: |
-         curl -L \
-         -H "Accept: application/vnd.github+json" \
-         -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-         -H "X-GitHub-Api-Version: 2022-11-28" \
-         https://api.github.com/users/Sakthi770/repos
+         response=$( curl -L \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/users/Sakthi770/repos)
+         echo $response | jq '.[] | select(.private == true) | .full_name'
 
    #    - name: Check environment creation
    #      run: |
