--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -25,7 +25,7 @@ jobs:
         run: |
          curl -L \
           -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/search/repositories?q=user:Sakthi770&per_page=100
          response=$( curl -L \
