--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -33,7 +33,7 @@ jobs:
           -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/search/repositories?q=user:Sakthi770&per_page=100 )
-         echo $response | jq '.[] | select(.private == true) | .full_name'
+         echo $response | jq '.[].full_name'
 
    #    - name: Check environment creation
    #      run: |
