--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -23,14 +23,14 @@ jobs:
 
       - name: List Repositories using octokit
         run: |
-         curl -L \
-          -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
-          -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/search/repositories?q=user:Sakthi770&per_page=100
+         # curl -L \
+         #  -H "Accept: application/vnd.github+json" \
+         #  -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
+         #  -H "X-GitHub-Api-Version: 2022-11-28" \
+         #  https://api.github.com/search/repositories?q=user:Sakthi770&per_page=100
          response=$( curl -L \
           -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/search/repositories?q=user:Sakthi770&per_page=100 )
          echo $response | jq '.[].full_name'
