--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -28,12 +28,12 @@ jobs:
          #  -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
          #  -H "X-GitHub-Api-Version: 2022-11-28" \
          #  https://api.github.com/search/repositories?q=user:Sakthi770&per_page=100
-         response=$( curl -L \
+         curl -L \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/search/repositories?q=user:Sakthi770&per_page=100 )
-         echo $response | jq '.[].full_name'
+          https://api.github.com/search/repositories?q=user:Sakthi770&per_page=100  > repos.json
+         cat repos.json | jq '.[] | select(.private == true) | .full_name'
 
    #    - name: Check environment creation
    #      run: |
