--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -17,9 +17,9 @@ jobs:
         uses: raven-actions/get-repos@v1
         with:
           owner: Sakthi770
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.PAT_TOKEN }}
       - name: rpeo list
-        run : echo "Relo list:${{steps.get-repos.outputs.repos}}"
+        run : echo "Relo list:${{steps.get-repos.outputs.repos.full_name}}"
 
       - name: List Repositories using octokit
         run: |
@@ -33,7 +33,7 @@ jobs:
           -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/search/repositories?q=user:Sakthi770&per_page=100  > repos.json
-         cat repos.json | jq '.[] | select(.private == true) | .full_name'
+         cat repos.json | jq -r '.[] | select(.private == true) | .full_name'
 
    #    - name: Check environment creation
    #      run: |
