--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -33,7 +33,7 @@ jobs:
           -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/search/repositories?q=user:Sakthi770&per_page=100  > repos.json
-         cat repos.json | jq -r '.[] | select(.private == true) | .full_name'
+         cat repos.json | jq -r '.items[] | select(.private == true) | .full_name'
 
    #    - name: Check environment creation
    #      run: |
