--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -19,15 +19,16 @@ jobs:
           owner: Sakthi770
           github-token: ${{ secrets.PAT_TOKEN }}
       - name: rpeo list
-        run : echo "Relo list:${{steps.get-repos.outputs.repos.full_name}}"
+        run : echo "Relo list:${{steps.get-repos.outputs.repos}}"
 
       - name: List Repositories using octokit
         run: |
-         # curl -L \
-         #  -H "Accept: application/vnd.github+json" \
-         #  -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
-         #  -H "X-GitHub-Api-Version: 2022-11-28" \
-         #  https://api.github.com/search/repositories?q=user:Sakthi770&per_page=100
+         curl -L \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/Sakthi770/repos | jq -r '[] | select(.private == true) | .full_name'
+          
          curl -L \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
