--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -22,18 +22,18 @@ jobs:
         run : echo "Relo list:${{steps.get-repos.outputs.repos}}"
 
       - name: List Repositories using octokit
-        run: |
+        run: |          
          curl -L \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/Sakthi770/repos | jq -r '[] | select(.private == true) | .full_name'
-          
+          https://api.github.com/search/repositories?q=user:Sakthi770&per_page=100 | jq -r '.items[] | map(select(.private == true)) | .full_name'
+
          curl -L \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/search/repositories?q=user:Sakthi770&per_page=100 | jq -r '.items[] | select(.private == true) | .full_name'
+          https://api.github.com/Sakthi770/repos | jq -r '[] | map(select(.private == true)) | .full_name'
 
    #    - name: Check environment creation
    #      run: |
