--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -19,7 +19,7 @@ jobs:
           owner: Sakthi770
           github-token: ${{ secrets.PAT_TOKEN }}
       - name: rpeo list
-        run : echo "Relo list:${{steps.get-repos.outputs.repos}}" | jq -r '.[] | map(select(.private == true)) | .full_name'
+        run : echo "Relo list:${{steps.get-repos.outputs.repos}}" | jq -r '.[] | select(.private == true) | .full_name'
 
       - name: List Repositories using octokit
         run: |          
@@ -27,7 +27,7 @@ jobs:
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/search/repositories?q=user:Sakthi770&per_page=100 | jq -r '.items[] | map(select(.private == true)) | .full_name'
+          https://api.github.com/search/repositories?q=user:Sakthi770&per_page=100 | jq -r '.items[] | select(.private == true) | .full_name'
 
          curl -L \
           -H "Accept: application/vnd.github+json" \
