--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -24,10 +24,13 @@ jobs:
       - name: List Repositories using octokit
         run: |          
          curl -L \
-          -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
-          -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/search/repositories?q=user:Sakthi770&per_page=100 | jq -r '.items[] | select(.private == true) | .full_name'
+           -H "Accept: application/vnd.github+json" \
+           -H "Authorization: Bearer ${secrets.PAT_TOKEN}" \
+           -H "X-GitHub-Api-Version: 2022-11-28" \
+           https://api.github.com/search/repositories?q=user:Sakthi770&per_page=100 > repolist.json
+         
+         response=$(jq -r '.items[] | select(.private == true) | .full_name' repolist.json)
+         echo "$response"
 
          curl -L \
           -H "Accept: application/vnd.github+json" \
