--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -28,6 +28,8 @@ jobs:
            -H "Authorization: Bearer ${secrets.PAT_TOKEN}" \
            -H "X-GitHub-Api-Version: 2022-11-28" \
            https://api.github.com/search/repositories?q=user:Sakthi770&per_page=100 > repolist.json
+
+         head -n 30 repolist.json
          
          response=$(jq -r '.items[] | select(.private == true) | .full_name' repolist.json)
          echo "$response"
