--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -29,7 +29,7 @@ jobs:
            -H "X-GitHub-Api-Version: 2022-11-28" \
            https://api.github.com/search/repositories?q=user:Sakthi770&per_page=100 > repolist.json
 
-         head -n 30 repolist.json
+         cat repolist.json | head -n 30
          
          response=$(jq -r '.items[] | select(.private == true) | .full_name' repolist.json)
          echo "$response"
