--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -1,8 +1,7 @@
 name: environment creation
 
 on:
- push:
-    
+   
  workflow_dispatch:
 
 jobs:
@@ -27,7 +26,7 @@ jobs:
            -H "Accept: application/vnd.github+json" \
            -H "Authorization: Bearer ${secrets.PAT_TOKEN}" \
            -H "X-GitHub-Api-Version: 2022-11-28" \
-           https://api.github.com/search/repositories?q=user:Sakthi770&per_page=100 > repolist.json
+           https://api.github.com/Sakthi770/repos > repolist.json
 
          cat repolist.json | head -n 30
          
