--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -24,7 +24,7 @@ jobs:
         run: |          
          curl -L \
            -H "Accept: application/vnd.github+json" \
-           -H "Authorization: Bearer ${secrets.PAT_TOKEN}" \
+           -H "Authorization: Bearer ${{secrets.PAT_TOKEN}}" \
            -H "X-GitHub-Api-Version: 2022-11-28" \
            https://api.github.com/Sakthi770/repos > repolist.json
 
