--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -22,15 +22,12 @@ jobs:
 
       - name: List Repositories using octokit
         run: |          
-         curl -L \
+         response=(curl -L \
            -H "Accept: application/vnd.github+json" \
            -H "Authorization: Bearer ${{secrets.PAT_TOKEN}}" \
            -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/search/repositories?q=user:Sakthi770&per_page=100 > repolist.json
+            "https://api.github.com/search/repositories?q=user:Sakthi770&per_page=100" | jq -r '.items[] | .full_name' )
 
-         cat repolist.json | head -n 30
-         echo "before response"
-         response=$(jq -r '.items[] | .full_name' repolist.json)
          echo "$response"
 
          # curl -L \
