--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -22,13 +22,19 @@ jobs:
 
       - name: List Repositories using octokit
         run: |          
-         response=(curl -L \
+         response=$(curl -L \
            -H "Accept: application/vnd.github+json" \
            -H "Authorization: Bearer ${{secrets.PAT_TOKEN}}" \
            -H "X-GitHub-Api-Version: 2022-11-28" \
             "https://api.github.com/search/repositories?q=user:Sakthi770&per_page=100" | jq -r '.items[] | .full_name' )
 
-         echo "$response"
+         # Store the output in an array
+         IFS=$'\n' read -rd '' -a full_names <<<"$response"
+         
+         # Print the array elements
+         for full_name in "${full_names[@]}"; do
+           echo "Full name: $full_name"
+         done
 
          # curl -L \
          #  -H "Accept: application/vnd.github+json" \
