--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -26,7 +26,7 @@ jobs:
            -H "Accept: application/vnd.github+json" \
            -H "Authorization: Bearer ${{secrets.PAT_TOKEN}}" \
            -H "X-GitHub-Api-Version: 2022-11-28" \
-            "https://api.github.com/search/repositories?q=user:Sakthi770&per_page=100" | jq -r '.items[] | .full_name' )
+            "https://api.github.com/search/repositories?q=user:Sakthi770" | jq -r '.items[] | .full_name' )
 
          # Store the output in an array
          IFS=$'\n' read -rd '' -a full_names <<<"$response"
