--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -27,6 +27,7 @@ jobs:
            -H "Authorization: Bearer ${{secrets.PAT_TOKEN}}" \
            -H "X-GitHub-Api-Version: 2022-11-28" \
             "https://api.github.com/search/repositories?q=user:Sakthi770" | jq -r '.items[] | .full_name' )
+         echo "Repositories=$response" >> $GITHUB_ENV
 
          # Store the output in an array
          # IFS=$'\n' read -rd '' -a full_names <<<"$response"
@@ -40,7 +41,16 @@ jobs:
          for full_name in "${full_names[@]}"; do
            echo "Full name: $full_name"
          done
-
+   
+   check-repo-name:
+       needs: demo
+       runs-on: ubuntu-latest
+       strategy:
+          matrix:
+             repo: ${{ fromJson(env.Repositories)}}
+       steps:
+         - name: check repo name
+           run: echo "Running task in ${{ matrix.repo }}
          # curl -L \
          #  -H "Accept: application/vnd.github+json" \
          #  -H "Authorization: Bearer ${{ secrets.PAT_TOKEN }}" \
