--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -27,7 +27,7 @@ jobs:
            -H "Authorization: Bearer ${{secrets.PAT_TOKEN}}" \
            -H "X-GitHub-Api-Version: 2022-11-28" \
             "https://api.github.com/search/repositories?q=user:Sakthi770" | jq -r '.items[] | .full_name' )
-         echo "Repositories=$response" >> $GITHUB_ENV
+         echo "repositories=$response" >> $GITHUB_OUTPUT
 
          # Store the output in an array
          # IFS=$'\n' read -rd '' -a full_names <<<"$response"
@@ -47,7 +47,7 @@ jobs:
        runs-on: ubuntu-latest
        strategy:
           matrix:
-             repo: ${{ fromJson(env.Repositories)}}
+             repo: ${{ fromJson(needs.demo.outputs.repositories)}}
        steps:
          - name: check repo name
            run: echo "Running task in ${{ matrix.repo }}
