--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -27,7 +27,6 @@ jobs:
            -H "Authorization: Bearer ${{secrets.PAT_TOKEN}}" \
            -H "X-GitHub-Api-Version: 2022-11-28" \
             "https://api.github.com/search/repositories?q=user:Sakthi770" | jq -r '.items[] | .full_name' )
-         echo "repositories=$response" >> $GITHUB_OUTPUT
 
          # Store the output in an array
          # IFS=$'\n' read -rd '' -a full_names <<<"$response"
@@ -41,6 +40,9 @@ jobs:
          for full_name in "${full_names[@]}"; do
            echo "Full name: $full_name"
          done
+
+         json_array=$(printf "[%s]" "$(IFS=,; echo "${full_names[*]}")")
+         echo "repositories=$json_array" >> $GITHUB_OUTPUT
    
    check-repo-name:
        needs: demo
