--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -22,26 +22,37 @@ jobs:
 
       - name: List Repositories using octokit
         run: |          
+         # response=$(curl -L \
+         #   -H "Accept: application/vnd.github+json" \
+         #   -H "Authorization: Bearer ${{secrets.PAT_TOKEN}}" \
+         #   -H "X-GitHub-Api-Version: 2022-11-28" \
+         #    "https://api.github.com/search/repositories?q=user:Sakthi770" | jq -r '.items[] | .full_name' )
+
+         # # Store the output in an array
+         # # IFS=$'\n' read -rd '' -a full_names <<<"$response"
+         # full_names=()
+         # while IFS= read -r line; do
+         #   full_names+=("$line")
+         # done <<< "$response"
+
+         
+         # # Print the array elements
+         # for full_name in "${full_names[@]}"; do
+         #   echo "Full name: $full_name"
+         # done
          response=$(curl -L \
            -H "Accept: application/vnd.github+json" \
            -H "Authorization: Bearer ${{secrets.PAT_TOKEN}}" \
            -H "X-GitHub-Api-Version: 2022-11-28" \
-            "https://api.github.com/search/repositories?q=user:Sakthi770" | jq -r '.items[] | .full_name' )
+            "https://api.github.com/search/repositories?q=user:Sakthi770")
 
-         # Store the output in an array
-         # IFS=$'\n' read -rd '' -a full_names <<<"$response"
          full_names=()
          while IFS= read -r line; do
            full_names+=("$line")
-         done <<< "$response"
+         done <<< "$(echo "$response" | jq -r '.items[] | .full_name')"
+                  
 
-         
-         # Print the array elements
-         for full_name in "${full_names[@]}"; do
-           echo "Full name: $full_name"
-         done
-
-         json_array=$(printf "[%s]" "$(IFS=,; echo "${full_names[*]}")")
+         json_array=$(printf "[\%s\]" "$(IFS='","'; echo "${full_names[*]}")")
          echo "JSON Array: $json_array"
 
            if [ -z "$json_array" ]; then
