--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -50,9 +50,11 @@ jobs:
          while IFS= read -r line; do
            full_names+=("$line")
          done <<< "$(echo "$response" | jq -r '.items[] | .full_name')"
-                  
-
-         json_array=$(printf "["\%s\"]" "$(IFS='","'; echo "${full_names[*]}")")
+          
+         # Convert the array to a JSON array
+         json_array=$(printf "[\"%s\"]" "$(IFS='","'; echo "${full_names[*]}")")
+          
+         # Correct the formatting to ensure the proper comma separation
          json_array="[\"$(IFS='","'; echo "${full_names[*]}")\"]"
          #JSON Array: ["Sakthi770/Tekton"Sakthi770/DBschematest"Sakthi770/git-training"Sakthi770/SelfhostedRunner"Sakthi770/GitPractice"Sakthi770/database-management"Sakthi770/flyway-production"Sakthi770/azure_devops"Sakthi770/flyway-selfhosted"Sakthi770/environmentcheck"]
          #json_array=$(printf '["%s"]' "$(IFS=','; echo "${full_names[*]}")")
