--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -69,11 +69,11 @@ jobs:
          #JSON Array: ["Sakthi770/Tekton,Sakthi770/DBschematest,Sakthi770/git-training,Sakthi770/SelfhostedRunner,Sakthi770/GitPractice,Sakthi770/database-management,Sakthi770/flyway-production,Sakthi770/azure_devops,Sakthi770/flyway-selfhosted,Sakthi770/environmentcheck"]
          echo "JSON Array: $formatted_list"
 
-           if [ -z "$json_array" ]; then
+           if [ -z "$formatted_list" ]; then
              echo "Error: JSON array is empty"
              exit 1
            fi
-         echo "repositories=$json_array" >> $GITHUB_OUTPUT
+         echo "repositories=$formatted_list" >> $GITHUB_OUTPUT
    
    check-repo-name:
        needs: demo
