--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -73,7 +73,7 @@ jobs:
              echo "Error: JSON array is empty"
              exit 1
            fi
-         repositories=["Sakthi770/Tekton","Sakthi770/DBschematest","Sakthi770/git-training","Sakthi770/SelfhostedRunner","Sakthi770/GitPractice","Sakthi770/database-management","Sakthi770/flyway-production","Sakthi770/azure_devops","Sakthi770/flyway-selfhosted","Sakthi770/environmentcheck"]'
+         repositories='["Sakthi770/Tekton","Sakthi770/DBschematest","Sakthi770/git-training","Sakthi770/SelfhostedRunner","Sakthi770/GitPractice","Sakthi770/database-management","Sakthi770/flyway-production","Sakthi770/azure_devops","Sakthi770/flyway-selfhosted","Sakthi770/environmentcheck"]'
          echo "repositories=$repositories" >> $GITHUB_OUTPUT
    
    check-repo-name:
