--- a/.github/workflows/environment.yaml
+++ b/.github/workflows/environment.yaml
@@ -74,7 +74,26 @@ jobs:
              exit 1
            fi
          echo 'repositories=["Sakthi770/Tekton","Sakthi770/DBschematest","Sakthi770/git-training","Sakthi770/SelfhostedRunner","Sakthi770/GitPractice","Sakthi770/database-management","Sakthi770/flyway-production","Sakthi770/azure_devops","Sakthi770/flyway-selfhosted","Sakthi770/environmentcheck"]' >> "$GITHUB_OUTPUT"
-   
+
+      - name: Define Colors
+        id: colors
+        run: |
+          echo 'colors=["red", "green", "blue"]' >> "$GITHUB_OUTPUT"
+
+   produce-artifacts:
+       runs-on: ubuntu-latest
+       needs: demo
+       strategy:
+         matrix:
+           color: ${{ fromJSON(needs.demo.outputs.colors) }}
+
+       steps:
+         - name: Define Color
+           env:
+             color: ${{ matrix.color }}
+           run: |
+             echo "$color" > color
+      
    check-repo-name:
        needs: demo
        runs-on: ubuntu-latest
